feature/upgrade-spring-and-java (#57)