@@ -1,14 +1,22 @@
 package br.com.itsmemario.ecordel.security;
 
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.JoinTable;
+import jakarta.persistence.ManyToMany;
+import jakarta.persistence.Table;
+import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import jakarta.persistence.*;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Entity
 @Table(name = "cordel_user")
@@ -16,20 +24,21 @@ public class CordelUser implements UserDetails {
 
 	public static final String USER_AUTHORITY_TABLE = "user_authority";
 
-	@Id
-	@GeneratedValue(strategy=GenerationType.IDENTITY)
+    @Id
+	@Getter
+	@GeneratedValue(strategy= GenerationType.IDENTITY)
 	private Long id;
 	private String username;
 	private String password;
 	private boolean enabled = true;
 	
-	@ManyToMany(fetch=FetchType.EAGER)
+	@ManyToMany(fetch= FetchType.EAGER)
 	@JoinTable(
 		name = USER_AUTHORITY_TABLE,
 		joinColumns = @JoinColumn(name="user_id"),
 		inverseJoinColumns = @JoinColumn(name="authority_id")
 	)
-	private Set<CordelAuthority> authorities = new HashSet<>();
+	private final Set<CordelAuthority> authorities = new HashSet<>();
 	
 	CordelUser() {}
 
@@ -72,12 +81,8 @@ public class CordelUser implements UserDetails {
 		return enabled;
 	}
 
-	public Long getId() {
-		return id;
-	}
-
-	public List<String> getAuthorityNames(){
-		return authorities.stream().map(CordelAuthority::getAuthority).collect(Collectors.toList());
+    public List<String> getAuthorityNames(){
+		return authorities.stream().map(CordelAuthority::getAuthority).toList();
 	}
 	
 
